# asciidoxy

./: .gitignore  .style.yapf  CHANGELOG.adoc  CHANGELOG.md  MANIFEST.in  Makefile  README.adoc  README.md  conftest.py  dev-requirements.txt  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: branch.yml  develop.yml  docker.yml  dockertest.yml  python-publish.yml  python-test.yml  pythonpackage.yml  pythonpublish.yml  release.yml
asciidoxy/: __init__.py  _version.py  api_reference.py  asciidoc.py  asciidoctor.py  cli.py  collect.py  compat.py  config.py  document.py  doxygen_xml.py  model.py  path_utils.py
asciidoxy/doxygenparser/: __init__.py  cpp.py  description_parser.py  driver.py  driver_base.py  java.py  language_base.py  language_traits.py  objc.py  parser.py  parser_base.py  python.py  type_parser.py
asciidoxy/generator/: __init__.py  asciidoc.py  asciidoxy-no-toc.css  asciidoxy-toc-left.css  asciidoxy-toc-right.css  cache.py  context.py  errors.py  filters.py  navigation.py
asciidoxy/packaging/: __init__.py  collect.py  manager.py
asciidoxy/parser/: __init__.py  base.py  driver_base.py  factory.py
asciidoxy/templates/: __init__.py  helpers.py
asciidoxy/transcoder/: __init__.py  base.py  kotlin.py  swift.py
docker/: Dockerfile
documentation/: Doxyfile  Makefile  _header.adoc  about.adoc  asciidoxy.toml  changelog.adoc  contents.toml  contributing.adoc  doxypypy.py  example-cpp.adoc  example-java.adoc  example-objc.adoc  example-python.adoc  example-swift-transcoded.adoc  examples.adoc  getting-started.adoc  index.adoc  manual.adoc  py_filter.sh  reference.adoc  usage.adoc
documentation/getting-started/: api-reference.adoc  basic-asciidoc-file.adoc  custom-templates.adoc  installation.adoc  multipage.adoc  packages.adoc  stylesheets.adoc  using-python.adoc
documentation/manual/: command-line-options.adoc  commands.adoc  packages.adoc  requirements.adoc
documentation/reference/: command-line-options.adoc  commands.adoc  doxygen.adoc  known-issues.adoc  packages.adoc  requirements.adoc
doxygen/: conanfile.py
tests/: __init__.py  builders.py  builders2.py  conftest.py  shared.py  test_api_reference.py  test_asciidoc.py  test_cli.py  test_collect.py  test_description_parser.py  test_doxygen_xml.py  test_doxygen_xml_cpp.py  test_doxygen_xml_java.py  test_doxygen_xml_objc.py  test_doxygenparser.py  test_doxygenparser__cpp.py  test_doxygenparser__description_parser.py  test_doxygenparser__java.py  test_doxygenparser__objc.py  test_doxygenparser__python.py  test_doxygenparser__type_parser.py  test_doxygenparser__type_parser__cpp.py  test_doxygenparser__type_parser__java.py  test_doxygenparser__type_parser__objc.py  test_doxygenparser__type_parser__python.py  test_generator.py  test_generator__context.py  test_generator__filters.py  test_generator__navigation.py  test_model.py  test_packaging__collect.py  test_packaging__manager.py  test_parser__sourcekitten.py  test_template_helpers.py  test_template_helpers_cpp.py  test_template_helpers_java.py  test_template_helpers_kotlin.py  test_template_helpers_objc.py  test_template_helpers_python.py  test_template_helpers_swift.py  (+4 more)
tests/adoc/: dangling_cross_doc_ref.expected.adoc  dangling_cross_doc_ref.expected.multipage.adoc  dangling_cross_doc_ref.input.adoc  dangling_link.expected.adoc  dangling_link.input.adoc  dangling_link_in_insert.expected.adoc  dangling_link_in_insert.input.adoc  double_insert.expected.adoc  double_insert.input.adoc  embeddedfile_test.input.adoc  env_variables.adoc  env_variables.expected.singlepage.adoc  env_variables_include.adoc  env_variables_include.expected.multipage.adoc  link_to_member.expected.adoc  link_to_member.input.adoc  multifile_test.input.adoc  multifile_test.input.expected.multipage.adoc  multifile_test.input.expected.singlepage.adoc  simple_test.expected.adoc  simple_test.input.adoc
tests/data/: ambiguous_names.xml  namespaceasciidoxy_1_1unsupported__kind.xml
tests/source_code/: generate_xml.py  versions.adoc
tests/unit/: api_reference_loader.py  builders.py  conftest.py  file_builder.py  matchers.py  shared.py  test_api_reference.py  test_asciidoctor.py  test_cli.py  test_document.py  test_doxygenparser.py  test_doxygenparser__cpp.py  test_doxygenparser__description_parser.py  test_doxygenparser__java.py  test_doxygenparser__objc.py  test_doxygenparser__python.py  test_doxygenparser__schema.py  test_doxygenparser__type_parser.py  test_doxygenparser__type_parser__cpp.py  test_doxygenparser__type_parser__java.py  test_doxygenparser__type_parser__objc.py  test_generator.py  test_generator__context.py  test_generator__filters.py  test_generator__navigation.py  test_model.py  test_packaging__collect.py  test_packaging__manager.py  test_template_helpers.py  test_template_helpers_java.py  test_template_helpers_objc.py  test_template_helpers_python.py  test_templates.py  test_test_matchers.py  test_transcoder__base.py  test_transcoder__swift.py
tests/visual/: cpp.adoc  descriptions.adoc  descriptions.toml  java.adoc  java.toml  kotlin.adoc  kotlin.toml  kotlin_from_java.adoc  kotlin_from_java.toml  multipage.adoc  multipage.multipage-toc-left-page-toc-left.adoc  multipage.multipage-toc-left.adoc  multipage.no-page-toc.adoc  multipage.toml  objc.adoc  (+4 more)
(+659 files in other folders)
