[metadata]
name = asciidoxy
version = attr: asciidoxy._version.__version__
author = Rob van der Most
author_email = Rob.vanderMost@TomTom.com
python_requires = >=3.6
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Software Development :: Documentation
description = AsciiDoxy generates API documentation from Doxygen XML output to AsciiDoc.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
keywords = asciidoxy, asciidoc, doxygen, documentation
url = https://asciidoxy.org
project_urls =
        Documentation = https://asciidoxy.org
        Bug Tracker = https://github.com/tomtom-international/asciidoxy/issues
        Source Code = https://github.com/tomtom-international/asciidoxy

[options]
packages = find:
install_requires =
    mako ~=1.1
    aiohttp ~=3.6
    aiodns
    cchardet
    toml ~=0.10
    tqdm ~=4.46
    packaging ~=20.3
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    asciidoxy
    asciidoxy.*

[options.entry_points]
console_scripts =
    asciidoxy = asciidoxy.cli:main

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 100
per-file-ignores =
    tests/*:E122,E501
    # Bug in yapf
    asciidoxy/parser/doxygen/cpp.py:E131
    asciidoxy/parser/doxygen/objc.py:E131

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
junit_family=legacy

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-mako.template]
ignore_missing_imports = True

[mypy-mako.exceptions]
ignore_missing_imports = True

[mypy-mako.lookup]
ignore_missing_imports = True

[mypy-tqdm]
ignore_missing_imports = True

[mypy-xml.dom]
ignore_missing_imports = True

[mypy-xml.dom.minidom]
ignore_missing_imports = True
